--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-responsive": "^8.0.5",
     "antd": "^5.2.2",
+    "axios": "^1.3.4",
     "eslint-config-airbnb": "^19.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,5 +52,6 @@
     "craco-alias": "^3.0.1",
     "craco-plugin-scoped-css": "^1.1.1",
     "prettier-eslint": "^15.0.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
