--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,7 +5,10 @@
       "@ui/*": ["./src/ui/*"],
       "@assets/*": ["./src/assets/*"],
       "@network/*": ["./src/network/*"],
-      "@interface/*": ["./src/interface/*"]
-    }
+      "@interface/*": ["./src/interface/*"],
+      "@redux/*": ["./src/redux/*"]
+    },
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   }
 }
