--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-responsive": "^8.0.5",
     "antd": "^5.2.2",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "eslint-config-airbnb": "^19.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
