atomic design + styled components 진행중

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
       "@assets/*": ["./src/assets/*"],
       "@network/*": ["./src/network/*"],
       "@interface/*": ["./src/interface/*"],
-      "@redux/*": ["./src/redux/*"]
+      "@redux/*": ["./src/redux/*"],
+      "@components/*": ["./src/ui/components/*"]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
