--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-responsive": "^8.0.5",
+    "@types/styled-components": "^5.1.26",
     "antd": "^5.2.2",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.58.3",
+    "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
