page내 로직 -> redux slice 쪽으로 분리

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,7 +7,8 @@
       "@network/*": ["./src/network/*"],
       "@interface/*": ["./src/interface/*"],
       "@redux/*": ["./src/redux/*"],
-      "@components/*": ["./src/ui/components/*"]
+      "@components/*": ["./src/ui/components/*"],
+      "@utils/*": ["./src/utils/*"]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
